infra/k8s/eks-sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-sample-deployment
  namespace: eks-sample-app
  labels:
    app: rekognition-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rekognition-go
  template:
    metadata:
      labels:
        app: rekognition-go
    spec:
      serviceAccountName: eks-rekognition-access
      containers:
        - name: rekognition-go
          image: hisamitsu/rekognition-go:latest
          ports:
            - name: http
              containerPort: 8080
          imagePullPolicy: IfNotPresent
