infra/k8s/eks-sample-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eks-sample-ingress
  namespace: eks-sample-app
  labels:
    app: rekognition-go
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: "/*"
            backend:
              serviceName: eks-sample-service
              servicePort: 80
